[package]
name = "mux"
version = "0.1.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
edition = "2018"

[dependencies]
tui = "0.4.0"
vte = "0.3.3"
structopt = "0.2.14"
tokio = {version = "0.1.15", features = ["async-await-preview"] }
tokio-process = "0.2.3"
failure = "0.1.5"
bytes = "0.4.11"
memchr = "2.2.0"
pretty_env_logger = "0.3.0"
futures = "0.1.25"
log = "0.4.6"
libc = "0.2.48"
tokio-async-await = "0.1.5"
termion = "1.5.1"
tokio-threadpool = "0.1.11"
fern = "0.5.7"
chrono = "0.4.6"
dirs = "1.0.4"

[profile.release]
lto = true
codegen-units = 1
